<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_secondary"
    android:orientation="vertical"
    tools:context=".view.TeamsFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/action">

        <androidx.cardview.widget.CardView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="20dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_left_arrow"
                app:tint="@color/action_secondary" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/gilroy_extrabold"
            android:gravity="center"
            android:text="@string/teams_title"
            android:textAlignment="center"
            android:textColor="@color/action_secondary"
            android:textSize="20sp" />

    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    app:indicatorColor="@color/loading_color"
                    app:trackCornerRadius="6dp"
                    app:trackThickness="7dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_bold"
                    android:gravity="center"
                    android:text="@string/teams_loading"
                    android:textAlignment="center"
                    android:textColor="@color/loading_color"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerTeams"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="50dp"
                    android:layout_weight="1"
                    android:layoutAnimation="@anim/layout_animation"
                    android:overScrollMode="never" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/createFixture"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginBottom="40dp"
                    android:fontFamily="@font/gilroy_bold"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingTop="11dp"
                    android:paddingEnd="10dp"
                    android:text="@string/teams_create_fixture"
                    android:textAlignment="center"
                    android:textColor="@color/background_secondary"
                    app:backgroundTint="@color/button_color"
                    app:elevation="15dp" />

            </LinearLayout>
        </FrameLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>